# COINjecture1337-REFACTOR

./: .gitignore  BOUNTY_WALLET_LOADING.md  CHANGELOG.md  CID_FIX_STATUS_v3.13.17.md  COMMUNITY_ANNOUNCEMENT_v3.16.0.md  MANIFESTO.md  NETWORK_B_STATUS.md  ONE_CLICK_INSTALL.md  README.md  REFACTOR_PLAN.md  VERSION  WHALESHEAVEN_LISTING.md  cid_encoding_fix_report.txt  cid_generator.py  computational_data_cid_fix_log_1761442920.json  computational_data_fix.py  consensus_service_memory_optimized.py  create_droplet.sh  database_update.py  deploy_mining_node.sh  final_cid_conversion_log_1761443175.json  fix_block_hashes.py  fix_consensus_capacity.py  fix_hash_field.py  fix_rewards_data_source.sh  fix_rewards_endpoint.sh  fix_rewards_simple.py  force_cid_conversion_log_1761443016.json  install_coinjecture.bat  install_coinjecture.sh  miner_config.json  one_click_install.py  prepare_release.sh  proper_cid_conversion_log_1761443084.json  robust_cid_conversion_log_1761442964.json  setup.py  successful_cid_conversion_log_1761443350.json  working_cid_conversion_log_1761443104.json
.github/workflows/: ci.yml  determinism.yml  go-ci.yml  integration.yml  parity.yml  python-ci.yml  rust-ci.yml  security.yml
cli-packages/: README.md
cli-packages/shared/: build_packages.py
cli-packages/shared/signing/: sign_packages.py
configs/network-a/: validator-1.yaml  validator-2.yaml  validator-3.yaml
docs/: ARTIFACT_VERIFICATION.md  CONSENSUS.md  CUTOVER_RUNBOOK.md  DUAL_NETWORK_STRATEGY.md  MIGRATION_GUIDE.md  PRODUCTION_READINESS.md  RELEASE_POLICY.md  RUST_INTEGRATION_PLAN.md  SLO.md
docs/blockchain/: pow.md
docs/guides/: ARCHITECTURE.md
go/: go.mod  go.sum
go/cmd/coinjecture-keygen/: main.go
go/cmd/coinjectured/: main.go
go/cmd/network-a-node/: main.go
go/cmd/token-demo/: main.go
go/cmd/validate-supply/: main.go
go/cmd/validate-supply-simple/: main.go
go/cmd/verify-emissions/: main.go
go/pkg/api/: server.go  verify.go  verify_nocgo.go
go/pkg/consensus/: README.md  block_test.go  builder.go  engine.go  engine_test.go  merkle_test.go  rust_bindings.go  rust_bindings_test.go  rust_parity_test.go
go/pkg/p2p/: consensus_integration.go  manager.go
go/pkg/state/: schema.go  state.go
go/pkg/tokenomics/: distributor.go  economics.go  genesis.go
go/test/integration/: multi_node_test.go
kaggle_data/: LICENSE  README.md  coinjecture_complexity_analysis.csv  coinjecture_computational_data.csv  coinjecture_gas_calculation.csv  coinjecture_mining_efficiency.csv  dataset_summary.json
migrations/: 001_financial_primitives.sql
monitoring/: README.md
monitoring/grafana/dashboards/: coinjecture-overview.json  parity-validation.json  security-compliance.json
monitoring/prometheus/: alerts.yml
python/tests/: test_parity_validator.py  test_rust_bindings.py
python/tests/e2e/: test_three_node_simulation.py
python/tests/property/: test_codec_properties.py
python/tools/: parity_monitor.py
rust/coinjecture-core/: Cargo.toml
rust/coinjecture-core/fuzz/: Cargo.toml
rust/coinjecture-core/fuzz/fuzz_targets/: fuzz_decode_block.rs  fuzz_header_hash.rs  fuzz_subset_sum_verify.rs
rust/coinjecture-core/golden/: network_b_vectors.json
rust/coinjecture-core/include/: coinjecture.h
rust/network-b/: Cargo.toml  TESTNET_GUIDE.md  TESTNET_QUICKSTART.md  TEST_QUICK_START.md  test-node1.ps1  test-node2.ps1  test-node3.ps1
rust/network-b/consensus/: Cargo.toml
rust/network-b/consensus/src/: lib.rs  miner.rs
rust/network-b/core/src/: transaction.rs
rust/network-b/mempool/src/: fee_market.rs  lib.rs  marketplace.rs
rust/network-b/network/src/: protocol.rs
rust/network-b/node/: Cargo.toml
rust/network-b/node/src/: chain.rs  main.rs  service.rs  validator.rs
rust/network-b/rpc/: Cargo.toml
rust/network-b/rpc/src/: server.rs
rust/network-b/runtime/: Cargo.toml
rust/network-b/state/src/: accounts.rs  dimensional_pools.rs  lib.rs  trustlines.rs
rust/network-b/testnet/: README.md  start-validator1.bat  start-validator2.bat  validator1.toml  validator2.toml  validator3.toml
rust/network-b/testnet/node1-test/chain/: db
rust/network-b/testnet/node1/chain/: db
rust/network-b/testnet/node2/state/: db
rust/network-b/tokenomics/src/: rewards.rs
rust/network-b/wallet/src/: main.rs
rust/network-b/wallet/src/commands/: transaction.rs
scripts/: auto_deploy_on_connection.py  check_cloudfront_status.py  check_database_cids.py  clear_cloudfront_cache.py  compare_golden_hashes.py  complete_power_cycle_deployment.sh  continuous_cid_migration.py  convert_json_cids.py  correct_json_cid_migration.py  deploy-network-a.sh  deploy_cid_fixes.sh  deploy_complete_cid_fix.sh  deploy_integrated_api.sh  deploy_integrated_api_to_droplet.sh  deploy_signature_fix.sh  final_cid_converter.py  final_cid_migration.py  fix_backend_cid_encoding.py  fix_cid_encoding.py  fix_computational_data_cids.py  fix_network_stuck_complete.sh  fix_signature_validation.py  force_cid_conversion.py  force_frontend_wallet_reset.py  implement_full_p2p_gossip.py  ip_triggered_deployment.py  migrate_cid_database.py  migrate_json_cids.py  network_stall_fix.py  power_cycle_services.sh  proper_cid_converter.py  regenerate_all_cids.py  robust_cid_converter.py  simple_cid_deployment.sh  successful_cid_converter.py  update_all_cids_in_db.py  update_all_database_cids.py  update_existing_cids.py  update_server_cids.py  validate_all_cids.py  (+2 more)
scripts/mining/: start_real_p2p_miner.py
src/: __init__.py  cli.py  consensus.py  consensus_service.py  node.py  p2p_discovery.py  pow.py  storage.py
src/api/: __init__.py  blockchain_storage.py  cache_manager.py  faucet_server.py  faucet_server_cors_fixed.py  faucet_server_v2_integrated.py  ingest_store.py  schema.py
src/core/: blockchain.py
src/tokenomics/: blockchain_state.py  wallet.py
tests/spec/: test_codec_golden.py
web/: API.README.md  README.md  api-docs.html  app.js  bucket-policy.json  cors.json  deploy-s3-simple.sh  deploy-s3.sh  download.html  explorer.html  index.html  metrics.html  mining.html  proof.html  style.css
web/css/: style.css
(+5 files in other folders)
