[package]
name = "coinject-consensus"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
coinject-core = { path = "../core" }
coinject-tokenomics = { path = "../tokenomics" }
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
rand.workspace = true
bincode.workspace = true
hex.workspace = true
